Module Filter 7.x-2.x, 2015-03-12
---------------------------------
Added option to show description as expanded by default.
Improved description field so when it is open, interacting with it's contents
  does not make it collapse.
Placed collapsed/expanded images inside of module for easier, more reliable
  access.
Added option to place version in own column.
Issue #2113191 by joelpittet: Category tabs not working.


Module Filter 7.x-2.0, 2015-02-22
---------------------------------
Simplifying the table rows by hiding version and requirements until a
  particular description is clicked.
#2235553 by greenSkin: Fixed latest jquery_update breaks module filter.
#2304687 by mpdonadio: Fixed Remove hardcoded operations.
#2293029 by topsitemakers: Fixed Take header offset into account when selecting
  a tab.
#2290213 by topsitemakers: Minor typo in description - "has no affect" -> "has
  no effect".
#2141743, #2141743 by greenSkin: Fixed issues related to the new dynamically
  positioned tabs and using the dynamically positioned save button.
by greenSkin: Tabs now should always be visible while scrolling large lists of
  modules.
#1854348 by alexweber, greenSkin: Make filter textfield wider on modules page
  when viewing as tabs.
by greenSkin: Fixed what was suppose to be a call to variable_set().
#1370492 by greenSkin: Remember selected tab after modules form submit.
by greenSkin: Changed the title for the 'module_filter_dynamic_save_position'
  checkbox to make it clearer what it does.
#1166414 by greenSkin: Fixed broken submit when tabs are disabled. We no longer
  reroute the theme of the system modules page unless tabs are enabled.
by greenSkin: Fixed issue on Available updates page where the update state
  would not be remembered.
by greenSkin: Fixed 7200 update to rebuild the theme registry at the same time
  as rebuilding the menu.
by greenSkin: Fixed issue relating to row coloring when enabling/disabling