@@ -17,9 +17,9 @@ files[] = js/module_filter_tab.js
 
 configure = admin/config/user-interface/modulefilter
 
-; Information added by Drupal.org packaging script on 2015-03-13
-version = "7.x-2.0+9-dev"
+; Information added by Drupal.org packaging script on 2016-03-21
+version = "7.x-2.0+14-dev"
 core = "7.x"
 project = "module_filter"
-datestamp = "1426208586"
+datestamp = "1458539046"
 
